--- a/HM1/index.html
+++ b/HM1/index.html
@@ -36,7 +36,7 @@
                             Morbi imperdiet augue quis tellus.
                         </p>
                         <br>
-                        <p>HTML and CSS are our tools. Mauris a ante.
+                        <p><abbr title="">HTML</abbr> and <abbr title="">CSS</abbr>are our tools. Mauris a ante.
                             Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc.
                             Morbi imperdiet augue quis tellus. Praesent mattis, massa quis luctus fermentum,
                             turpis mi volutpat justo, eu volutpat enim diam eget metus. To copy a file type COPY <i>filename.</i>
