--- a/HW2/Responsive/src/index.html
+++ b/HW2/Responsive/src/index.html
@@ -32,7 +32,7 @@
             The side facing away from Earth has only been seen by the human eye from spacecraft.
             </p>
           </div>
-          <img src="../assets/dark-side.png" alt="">
+          <img src="../assets/dark-side.png" alt="dark-side">
         </div>
 
         <div class="text-img reverse-box">
@@ -46,7 +46,7 @@
               The side facing away from Earth has only been seen by the human eye from spacecraft.
             </p>
           </div>
-          <img src="../assets/earth-tides.png" alt="">
+          <img src="../assets/earth-tides.png" alt="tides">
         </div>
 
         <div class="text-img">
@@ -60,7 +60,7 @@
               The side facing away from Earth has only been seen by the human eye from spacecraft.
             </p>
           </div>
-          <img src="../assets/drifting-moon.png" alt="">
+          <img src="../assets/drifting-moon.png" alt="moon">
         </div>
 
         <div class="text-img reverse-box">
@@ -74,7 +74,7 @@
               The side facing away from Earth has only been seen by the human eye from spacecraft.
             </p>
           </div>
-          <img src="../assets/less-weight-on-the-moon.png" alt="">
+          <img src="../assets/less-weight-on-the-moon.png" alt="moon">
         </div>
 
         <div class="text-img">
@@ -88,7 +88,7 @@
               The side facing away from Earth has only been seen by the human eye from spacecraft.
             </p>
           </div>
-          <img src="../assets/12-americans.png" alt="">
+          <img src="../assets/12-americans.png" alt="americans">
         </div>
 
         <div class="text-img reverse-box">
@@ -102,7 +102,7 @@
               The side facing away from Earth has only been seen by the human eye from spacecraft.
             </p>
           </div>
-          <img src="../assets/no-atmosphere.png" alt="">
+          <img src="../assets/no-atmosphere.png" alt="no-atmospphere">
         </div>
 
         <div class="text-img">
@@ -116,7 +116,7 @@
               The side facing away from Earth has only been seen by the human eye from spacecraft.
             </p>
           </div>
-          <img src="../assets/moon-quakes.png" alt="">
+          <img src="../assets/moon-quakes.png" alt="quakes">
         </div>
 
         <div class="text-img reverse-box">
@@ -130,7 +130,7 @@
               The side facing away from Earth has only been seen by the human eye from spacecraft.
             </p>
           </div>
-          <img src="../assets/spacecraft.png" alt="">
+          <img src="../assets/spacecraft.png" alt="spececraft">
         </div>
 
         <div class="text-img">
@@ -144,7 +144,7 @@
               The side facing away from Earth has only been seen by the human eye from spacecraft.
             </p>
           </div>
-          <img src="../assets/moon-station.png" alt="">
+          <img src="../assets/moon-station.png" alt="station-moon">
         </div>
 
         <div class="text-img reverse-box">
@@ -158,7 +158,7 @@
               The side facing away from Earth has only been seen by the human eye from spacecraft.
             </p>
           </div>
-          <img src="../assets/nuclear-bomb.png" alt="">
+          <img src="../assets/nuclear-bomb.png" alt="bomb">
         </div>
 
       </div>
