--- a/HW2/Responsive/src/index.html
+++ b/HW2/Responsive/src/index.html
@@ -10,13 +10,13 @@
 <body>
   <!-- Your code goes here -->
   <section class="container">
-    <header>
+    <nav>
       <ul>
         <a href=""><li>The Moon</li></a>
         <a href=""><li>The Sun</li></a>
         <a href=""><li>The Earth</li></a>
       </ul>
-    </header>
+    </nav>
 
     <section class="facts">
       <div class="text-main"><h1>10 <i>intersting</i> facts about the Moon</h1></div>
