--- a/HW6/index.html
+++ b/HW6/index.html
@@ -15,7 +15,7 @@
     </div>
     </header>
 
-    <ul class="list-box">
+    <ul class="list-wrapper">
         <li class="one"><p class="text-list"><span class="check">&#10004;</span><span>List 1</span></p> <span class="close">&#10006;</span></li>
         <li class="two"><p class="text-list"><span class="check">&#10004;</span><span>List 1</span></p> <span class="close">&#10006;</span></li>
         <li class="one"><p class="text-list"><span class="check">&#10004;</span><span>List 1</span></p> <span class="close">&#10006;</span></li>
